# snapwm

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  config.h  keyboard.c  tiling.c  wm.c  wm_dll.c
.github/workflows/: build.yml
src/app/: keyboard.c  tiling.c  tiling.h  wm.c
src/common/: error.c  shared_mem.c
src/dll/: wm_dll.c
